updated spring boot to 3.5.6, upgraded dockerfiles to jdk 25