@@ -1,4 +1,4 @@
-FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:21-cds as build
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:25-cds AS build
 
 WORKDIR /workspace/app
 
@@ -9,7 +9,7 @@ COPY src src
 
 RUN --mount=type=cache,target=/root/.m2 ./mvnw clean compile spring-boot:process-aot package -DskipTests -Penhance
 
-FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:21-cds as optimizer
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:25-cds as optimizer
 WORKDIR /workspace/app
 COPY --from=build /workspace/app/target/*.jar application.jar
 
@@ -17,7 +17,7 @@ RUN java -Djarmode=tools -jar application.jar extract --destination application
 WORKDIR /workspace/app/application
 RUN java -Dspring.aot.enabled=true -XX:ArchiveClassesAtExit=application.jsa -Dspring.context.exit=onRefresh -jar application.jar
 
-FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:21-cds
+FROM ghcr.io/bell-sw/liberica-openjdk-alpine-musl:25-cds
 
 VOLUME /tmp
 
@@ -27,4 +27,4 @@ COPY --from=optimizer ${DEPENDENCY}/application/application.jsa /app/application
 
 WORKDIR /app/application
 
-ENTRYPOINT ["java", "-Dspring.aot.enabled=true", "-XX:SharedArchiveFile=application.jsa", "-jar", "application.jar"]
+ENTRYPOINT ["java", "-Dspring.aot.enabled=true", "-XX:+UseCompactObjectHeaders", "-XX:SharedArchiveFile=application.jsa", "-jar", "application.jar"]
